name:                offset
version:             0.1.1.2
synopsis:            A library that communicates with wordpress over its api.
-- description:
homepage:            https://github.com/dbp/offset
license:             BSD3
license-file:        LICENSE
author:              Daniel Patterson <dbp@positiondev.com>, Matt Raibert <mattraibert@positiondev.com>, Libby Horacek <libby@positiondev.com>
maintainer:          dbp@positiondev.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:
                  Web.Offset
                , Web.Offset.Internal
                , Web.Offset.Types
                , Web.Offset.Field
                , Web.Offset.Init
                , Web.Offset.Splices
                , Web.Offset.Queries
                , Web.Offset.HTTP
                , Web.Offset.Cache
                , Web.Offset.Cache.Types
                , Web.Offset.Cache.Redis
                , Web.Offset.Posts
                , Web.Offset.Utils
  -- other-extensions:
  build-depends:       aeson
                     , base < 4.9
                     , blaze-builder
                     , data-default
                     , hedis
                     , heist >= 0.14
                     , map-syntax
                     , lens
                     , text
                     , bytestring
                     , wreq >= 0.3
                     , configurator
                     , time
                     , xmlhtml >= 0.2.3.2
                     , async
                     , mtl
                     , either
                     , unordered-containers
                     , containers
                     , vector
                     , attoparsec
                     , larceny
  hs-source-dirs: src
  default-language:    Haskell2010
