name:                snaplet-wordpress
version:             0.1.0.0
synopsis:            A snaplet that communicates with wordpress over it's api.
-- description:
homepage:            https://github.com/dbp/snaplet-wordpress
license:             BSD3
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    Snap.Snaplet.Wordpress
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson
                     , base >=4.5 && <4.8
                     , blaze-builder >= 0.3.3.3
                     , data-default
                     , hedis
                     , heist >= 0.14
                     , map-syntax
                     , lens < 4.4
                     , snap >= 0.13 && < 0.14
                     , snap-core >= 0.9 && < 0.10
                     , snaplet-redis
                     , text
                     , bytestring
                     , wreq < 0.2
                     , configurator
                     , xmlhtml >= 0.2.3.2
                     -- NOTE(dbp 2014-09-10): network is a transitive dependency,
                     -- because cabal couldn't figure it out.
                     , network < 2.6

                     , hspec2
                     , hspec-snap
                     , mtl
                     , either
                     , unordered-containers
                     , containers
                     , vector
                     , attoparsec
  hs-source-dirs: src
  default-language:    Haskell2010

Test-Suite test-snaplet-wordpress
    type:       exitcode-stdio-1.0
    hs-source-dirs: spec
    main-is: Main.hs
    build-depends:     base >= 4.6 && < 4.8
                     , heist
                     , hspec-snap
                     , hspec2
                     , snap
                     , snaplet-wordpress
                     , blaze-builder
                     , snaplet-redis
                     , lens
                     , data-default
                     , text
                     , xmlhtml
                     , mtl
                     , either
                     , unordered-containers